# OpenGLPlayground

./: CMakeLists.txt  conanfile.txt
documents/code/Chapter1/GettingStarted/: GettingStarted.sln
documents/code/Chapter1/ImageLoader/: ImageLoader.sln
documents/code/Chapter1/RippleDeformer/: RippleDeformer.sln
documents/code/Chapter1/SimpleTriangle/: SimpleTriangle.sln
documents/code/Chapter1/SubdivisionGeometryShader/: SubdivisionGeometryShader.sln
documents/code/Chapter2/FreeCamera/: FreeCamera.sln
documents/code/Chapter2/Picking_ColorBuffer/: Picking_ColorBuffer.sln
documents/code/Chapter2/Picking_DepthBuffer/: Picking_DepthBuffer.sln
documents/code/Chapter2/Picking_SceneIntersection/: Picking_SceneIntersection.sln
documents/code/Chapter2/SimpleCamera/: SimpleCamera.sln
documents/code/Chapter2/TargetCamera/: TargetCamera.sln
documents/code/Chapter2/ViewFrustumCulling/: ViewFrustumCulling.sln
documents/code/Chapter2/src/: AbstractCamera.h  FreeCamera.cpp  TargetCamera.cpp  TargetCamera.h  TexturedPlane.cpp  TexturedPlane.h
documents/code/Chapter3/Convolution/: Convolution.sln
documents/code/Chapter3/DynamicCubemap/: DynamicCubemap.sln  DynamicCubemap.vcxproj  DynamicCubemap.vcxproj.filters  main.cpp
documents/code/Chapter3/Glow/: Glow.sln  Glow.vcxproj  Glow.vcxproj.filters  main.cpp
documents/code/Chapter3/MirrorUsingFBO/: MirrorUsingFBO.sln
documents/code/Chapter3/Skybox/: Skybox.vcxproj  Skybox.vcxproj.filters  main.cpp
documents/code/Chapter3/SkyboxWater/: SkyboxWater.sln  SkyboxWater.vcxproj  SkyboxWater.vcxproj.filters  main.cpp
documents/code/Chapter3/TwirlFilter/: TwirlFilter.sln
documents/code/Chapter3/src/: AbstractCamera.cpp  FreeCamera.h  Grid.cpp  Quad.cpp  Quad.h  RenderableObject.cpp  RenderableObject.h  Skybox.cpp  Skybox.h  UnitColorCube.h  UnitCube.cpp  UnitCube.h  WaterSurface.cpp  WaterSurface.h
documents/code/Chapter4/DirectionalLight/: DirectionalLight.sln  DirectionalLight.vcxproj  main.cpp
documents/code/Chapter4/PerFragmentLighting/: PerFragmentLighting.sln  PerFragmentLighting.vcxproj.vcxproj  main.cpp
documents/code/Chapter4/PerVertexLighting/: PerVertexLighting.sln  PerVertexLighting.vcxproj  PerVertexLighting.vcxproj.filters  main.cpp
documents/code/Chapter4/PointLight/: PointLight.sln  PointLight.vcxproj  main.cpp
documents/code/Chapter4/ShadowMapping/: ShadowMapping.sln  ShadowMapping.vcxproj  main.cpp
documents/code/Chapter4/ShadowMappingPCF/: ShadowMappingPCF.sln  ShadowMappingPCF.vcxproj  main.cpp
documents/code/Chapter4/SpotLight/: SpotLight.sln  SpotLight.vcxproj  main.cpp
documents/code/Chapter4/VarianceShadowMapping/: VarianceShadowMapping.sln  VarianceShadowMapping.vcxproj  VarianceShadowMapping.vcxproj.filters  main.cpp
documents/code/Chapter4/src/: Grid.cpp  RenderableObject.cpp  RenderableObject.h  UnitCube.cpp  UnitCube.h
documents/code/Chapter5/3dsViewer/: 3ds.cpp  3ds.h  3dsViewer.sln  3dsViewer.vcxproj  3dsViewer.vcxproj.filters  MeshLoader.cpp  MeshLoader.h  main.cpp
documents/code/Chapter5/EZMeshViewer/: EZMeshViewer.sln  EZMeshViewer.vcxproj  EZMeshViewer.vcxproj.filters  Ezm.h  main.cpp
documents/code/Chapter5/ObjViewer/: ObjViewer.sln  ObjViewer.vcxproj  ObjViewer.vcxproj.filters  main.cpp
documents/code/Chapter5/SimpleParticles/: SimpleParticles.sln  SimpleParticles.vcxproj  main.cpp
documents/code/Chapter5/TerrainGeometryShader/: TerrainGeometryShader.sln
documents/code/Chapter5/TerrainLoading/: TerrainLoading.sln
documents/code/Chapter6/DualDepthPeeling/: DualDepthPeeling.sln  DualDepthPeeling.vcxproj  (+1 more)
projects/: CMakeLists.txt  cmake_install.cmake
projects/intro/: CMakeLists.txt
projects/intro/source/: main.cpp
projects/ripple_mesh/: CMakeLists.txt
projects/ripple_mesh/resource/: shader.frag  shader.vert  shader_frag.cpp  shader_vert.cpp
projects/ripple_mesh/source/: main.cpp
rcc/: CMakeLists.txt  rcc.cmake
rcc/include/: resource.hpp
rcc/rcc/: CMakeLists.txt
rcc/rcc/source/: main.cpp
rcc/source/: resource.cpp
utility/: CMakeLists.txt
utility/include/: shader.hpp
utility/source/: shader.cpp
(+266 files in other folders)
